src/atoms/toggles/index.module.scss
.base_toggle {
  word-break: keep-all;
  transition: background-color 133ms linear;

  input[type='checkbox'] {
    display: none;
  }
}

.box_toggle {
  font-size: 16px;
  padding: 5px 10px;
  display: block;
  border: none;
  background-color: var(--gray-10);
  color: var(--text-color);
  user-select: none;

  &.toggled {
    background-color: var(--gray-80);
    color: var(--background-color);
  }
}

.minimal_toggle {
  border: none;

  svg > * {
    fill: var(--gray-50);
  }

  &.toggled {
    color: var(--background-color);

    svg > * {
      fill: var(--gray-90);
    }
  }
}

